k8s/demo/nginx/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: default
  labels:
    service: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
